--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 backend/backend/src/main/resources/redlado-23a1a-firebase-adminsdk-e0k7b-ff455bb2b7.json
 # Environment files
-.env
+Private.env
 
 # Specific files to ignore
 package.json
