fix bug and update jwt for login

--- a/backend/backend/src/main/resources/application.yml
+++ b/backend/backend/src/main/resources/application.yml
@@ -42,3 +42,9 @@ security:
         enabled: false
       csrf:
         disabled: true
+
+logging:
+  level:
+    org:
+      springframework:
+        security: DEBUG
