--- a/backend/backend/src/main/resources/application.properties
+++ b/backend/backend/src/main/resources/application.properties
@@ -13,6 +13,8 @@ spring.security.oauth2.client.registration.facebook.client-secret=YOUR_FACEBOOK_
 spring.security.oauth2.client.registration.facebook.scope=email,public_profile
 spring.security.oauth2.client.registration.facebook.redirect-uri={baseUrl}/login/oauth2/code/facebook
 
+logging.level.org.springframework.security=DEBUG
+
 server.servlet.session.cookie.name=JSESSIONID
 server.servlet.session.cookie.path=/
 server.servlet.session.cookie.http-only=true
