--- a/backend/backend/src/main/resources/application.properties
+++ b/backend/backend/src/main/resources/application.properties
@@ -20,3 +20,10 @@ server.servlet.session.cookie.path=/
 server.servlet.session.cookie.http-only=true
 server.servlet.session.cookie.secure=false
 
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=gla1vesaigon@gmail.com
+spring.mail.password=Thong2003
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
