--- a/backend/backend/src/main/resources/application.properties
+++ b/backend/backend/src/main/resources/application.properties
@@ -22,8 +22,9 @@ server.servlet.session.cookie.secure=false
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=gla1vesaigon@gmail.com
-spring.mail.password=Thong2003
+spring.mail.username=lthuy21@clc.fitus.edu.vn
+spring.mail.password=alvinyeupaoi1711
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
 
